<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">Music Player</string>
    <string name="playlist_empty">Your playlist is empty</string>
    <string name="rename_song">Rename song</string>
    <string name="rename_song_error">An error occurred during the renaming</string>
    <string name="rename_song_empty">Please fill in all fields</string>
    <string name="repeat_off">Repeat off</string>
    <string name="repeat_song">Repeat current song</string>
    <string name="repeat_playlist">Repeat all</string>
    <string name="stop_playback_after_current_song">Stop playback after current song</string>
    <string name="enable_shuffle">Enable shuffle</string>
    <string name="disable_shuffle">Disable shuffle</string>
    <string name="shuffle_enabled">Shuffle enabled</string>
    <string name="shuffle_disabled">Shuffle disabled</string>
    <string name="volume">Volume</string>
    <string name="playback_speed">Playback speed</string>
    <string name="loading_files">Loading files…</string>
    <!-- Playlists -->
    <string name="add_file_to_playlist">Add file to playlist</string>
    <string name="add_folder_to_playlist">Add folder to playlist</string>
    <string name="manage_playlists">Manage playlists</string>
    <string name="playlists">Playlists</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="playlist_name_exists">A playlist with that name already exists</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="remove_playlist_description">This will only remove the selected playlists. The actual files will not be deleted.</string>
    <string name="remove_playlist_description_placeholder">This will only remove playlist \"%s\". The actual files will not be deleted.</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="remove_from_playlist_description">This will only remove the items from playlist \"%s\". The actual files will not be deleted.</string>
    <string name="delete_the_files_too">Delete the files too</string>
    <string name="open_playlist">Open playlist</string>
    <string name="all_songs_cannot_be_deleted">\"All songs\" playlist cannot be deleted</string>
    <string name="empty_playlist">Current playlist is empty</string>
    <string name="fetching_songs">Fetching songs…</string>
    <string name="all_songs">All songs</string>
    <string name="create_playlist_from_folder">Create new playlist from folder</string>
    <string name="folder_contains_no_audio">The selected folder contains no audio files</string>
    <string name="delete_current_song">Delete current song</string>
    <string name="delete_song_warning">WARNING: This will delete the selected files themselves from the device, all playlists included.</string>
    <string name="remove_current_song">Remove current song from playlist</string>
    <string name="show_filename">Show filename as song title</string>
    <string name="title_is_not_available">If title is not available</string>
    <string name="show_album_cover">Show album cover on the main screen</string>
    <string name="all_tracks">All tracks</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="create_playlist_label">You can create a new playlist by selecting the wanted artists, albums or tracks and using Menu -> Add to playlist.</string>
    <string name="export_playlist">Export playlist</string>
    <string name="import_playlist">Import playlist</string>
    <string name="filename_without_m3u">Filename (without .m3u)</string>
    <!-- Sorting -->
    <string name="track_count">Track Count</string>
    <string name="most_played">Most played</string>
    <string name="use_date_added_to_playlist">Use the time added to this playlist</string>
    <string name="album_count">Album Count</string>
    <string name="artist_name">Artist Name</string>
    <string name="year">Year</string>
    <string name="track_number">Track number</string>
    <string name="use_for_this_playlist">Use for this playlist only</string>
    <string name="use_for_this_album">Use for this album only</string>
    <!-- Artists -->
    <string name="artists">Artists</string>
    <string name="folders">Folders</string>
    <string name="genres">Genres</string>
    <string name="albums">Albums</string>
    <plurals name="albums_plural">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <string name="tracks">Tracks</string>
    <plurals name="tracks_plural">
        <item quantity="one">%d Track</item>
        <item quantity="other">%d Tracks</item>
    </plurals>
    <!-- %1 is disc number, %2 is track number -->
    <string name="track_on_disk">%1$d.%2$s</string>
    <!-- Queue -->
    <string name="next_track">Next:</string>
    <string name="track_queue">Queue</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="create_playlist_from_queue">Create playlist from queue</string>
    <!-- Settings -->
    <string name="equalizer">Equalizer</string>
    <string name="swap_prev_next">Swap previous/next headphone buttons</string>
    <string name="adaptive_track_theme">Color the app from the playing track\'s cover</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="auto_check_for_updates">Check for updates automatically</string>
    <string name="checking_for_updates">Checking for updates…</string>
    <string name="no_updates_available">You\'re up to date</string>
    <string name="new_update_available">Update available</string>
    <string name="new_update_available_version">Version %1$s</string>
    <string name="downloading_update">Downloading update</string>
    <string name="downloading_update_percent">Downloading… %1$d%%</string>
    <string name="tap_to_install">Tap to install</string>
    <string name="install">Install</string>
    <string name="retry">Retry</string>
    <string name="grant_install_permission">Allow this app to install updates, then try again</string>
    <string name="exclude_folder_description">Excluding a folder will prevent the displaying of all audio files within. Files manually added to playlists will not be affected.</string>
    <string name="rescan_media">Rescan media</string>
    <!-- FAQ -->
    <string name="faq_1_title">How can I fast-forward songs?</string>
    <string name="faq_1_text">You can click on the current or max duration texts near the seekbar, that will move the song either backward, or forward.</string>
    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->

    <!-- Playback panel -->
    <string name="now_playing">Now playing</string>
    <string name="favorite">Favorite</string>
    <string name="more_options">More options</string>

    <!-- Lyrics -->
    <string name="no_lyrics_found">No lyrics found</string>

    <!-- Library shortcuts -->
    <string name="recent">Recent</string>

    <!-- Playback -->
    <string name="playback_stopped">Playback stopped</string>

    <!-- Track options -->
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="go_to_album">Go to album</string>
    <string name="more_options_for">More options for %s</string>
</resources>
