<?xml version="1.0" encoding="utf-8"?>
<!-- The options a track row offers. The playback panel shows @menu/menu_playback_track instead,
     which drops the actions that make no sense for the track already playing. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/ic_play_24"
        android:title="@string/play" />
    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_shuffle_off_24"
        android:title="@string/shuffle" />
    <item
        android:id="@+id/action_play_next"
        android:icon="@drawable/ic_play_next_24"
        android:title="@string/play_next" />
    <item
        android:id="@+id/action_add_to_queue"
        android:icon="@drawable/ic_queue_add_24"
        android:title="@string/add_to_queue" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_24"
        android:title="@string/add_to_playlist" />
    <item
        android:id="@+id/action_go_to_artist"
        android:icon="@drawable/ic_artist_24"
        android:title="@string/go_to_artist" />
    <item
        android:id="@+id/action_go_to_album"
        android:icon="@drawable/ic_album_24"
        android:title="@string/go_to_album" />
    <item
        android:id="@+id/action_properties"
        android:icon="@drawable/ic_details_24"
        android:title="@string/properties" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/share" />
</menu>
